Updated tests to add multi-parameters.

--- a/test/integration/artifacts/application/ExpectedOut.html
+++ b/test/integration/artifacts/application/ExpectedOut.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" href="../../../../basic.css">
-</head>
-<body>
+    <head>
+        <link rel="stylesheet" href="../../../../src/resources/output/styles.css">
+    </head>
+    <body>
 <p><a href="PhpInvoker"><em>invoker</a>
 <a href="../testModule.php"></em>module</a></p>
 <h1 id="sayinghelloworld">Saying hello world!</h1>
 <p>Our project rocks and needs to output Hello world!</p>
 <h2 id="example">Example</h2>
 <p>When the project function is called then we see the output <span class="successful-test">Hello World</span>.</p>
-</body>
+    </body>
 </html>
