--- a/test/unit/artifacts/output/ExpectedPassingTests.html
+++ b/test/unit/artifacts/output/ExpectedPassingTests.html
@@ -1,2 +1,7 @@
-<p>This is a <span class="successful-test">passing</span> test.<br />
-This is also a <span class="successful-test">passing</span> test.</p>
+<h1 id="parameterless">PARAMETERLESS</h1>
+<p><span class="successful-test">T1</span><br />
+<span class="successful-test">T2</span></p>
+<h1 id="singleparameter">SINGLE PARAMETER</h1>
+<p>A <span class="successful-test">T3</span></p>
+<h1 id="multiparameter">MULTI PARAMETER</h1>
+<p>B C <span class="successful-test">T4</span></p>
