--- a/demo/js/markdown/output/output.html
+++ b/demo/js/markdown/output/output.html
@@ -8,5 +8,12 @@
 <p>Our project rocks and needs to output Hello world!</p>
 <h2 id="example">Example</h2>
 <p>When the project function is called then we see the output <span class="successful-test">Hello World</span>.</p>
+<h2 id="addinganumber">Adding a number</h2>
+<p>Adding a single number is simple.
+Assuming we have a number 5, then if the system adds one, 
+we see the output <a href="t:Test.testPlusOne(var1)">51</a>.</p>
+<h2 id="addingabook">Adding a book</h2>
+<p>Assuming we have a book with an ISBN number12345, a title Test And Testing and a description A book about tests,
+when we add it to the library, then we get the highest ISBN <a href="t:testLibraryAddBook(isbn,title,test)">12345</a></p>
     </body>
 </html>
