RIP DEMO QUATRE

--- a/demo/js/markdown/output/output.html
+++ b/demo/js/markdown/output/output.html
@@ -8,6 +8,8 @@
 <p>Our project rocks and needs to output Hello world!</p>
 <h2 id="example">Example</h2>
 <p>When the project function is called then we see the output <span class="successful-test">Hello World</span>.</p>
+<h2 id="example-1">Example</h2>
+<p>When the project function is called then we see the output <span class="failed-test"><span class="failed-test-expected-result">Hella World</span> <span class="failed-test-actual-result">Hello World</span></span>.</p>
 <h2 id="addinganumber">Adding a number</h2>
 <p>Adding a single number is simple.
 Assuming we have a number 5, then if the system adds one, 
