COMMIT BY STEVE -- Finish up demogit add .git add .git add .

--- a/demo/js/markdown/output/output.html
+++ b/demo/js/markdown/output/output.html
@@ -13,9 +13,9 @@
 <h2 id="addinganumber">Adding a number</h2>
 <p>Adding a single number is simple.
 Assuming we have a number 5, then if the system adds one, 
-we see the output <a href="t:Test.testPlusOne(var1)">51</a>.</p>
+we see the output <span class="successful-test">6</span>.</p>
 <h2 id="addingabook">Adding a book</h2>
 <p>Assuming we have a book with an ISBN number12345, a title Test And Testing and a description A book about tests,
-when we add it to the library, then we get the highest ISBN <a href="t:testLibraryAddBook(isbn,title,test)">12345</a></p>
+when we add it to the library, then we get the highest ISBN <span class="successful-test">12345</span></p>
     </body>
 </html>
