Fixed acceptance tests.

--- a/test/acceptation/artifacts/ExpectedOut.html
+++ b/test/acceptation/artifacts/ExpectedOut.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="../../../../src/resources/output/styles.css">
+        <link rel="stylesheet" href="../../../src/resources/output/styles.css">
     </head>
     <body>
 <h1 id="sayinghelloworld">Saying hello world!</h1>
