--- a/test/acceptation/artifacts/ExpectedOutSingle.html
+++ b/test/acceptation/artifacts/ExpectedOutSingle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../artifacts/styles.css">
     </head>
     <body>
 <h1 id="sayinghelloworld">Saying hello world!</h1>
